# Generated by Django 3.0.8 on 2020-07-21 09:10

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):
    dependencies = [
        ('gamedays', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Game',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('field', models.PositiveSmallIntegerField()),
                ('start', models.TimeField()),
                ('officials', models.CharField(max_length=100, null=True)),
                ('home', models.CharField(max_length=100, null=True)),
                ('fhHome', models.SmallIntegerField(null=True)),
                ('shHome', models.SmallIntegerField(null=True)),
                ('totalHome', models.PositiveSmallIntegerField(null=True)),
                ('away', models.CharField(max_length=100, null=True)),
                ('fhAway', models.SmallIntegerField(null=True)),
                ('shAway', models.SmallIntegerField(null=True)),
                ('totalAway', models.PositiveSmallIntegerField(null=True)),
                ('gameStart', models.TimeField(null=True)),
                ('gameHalftime', models.TimeField(null=True)),
                ('gameEnd', models.TimeField(null=True)),
                ('pin', models.PositiveSmallIntegerField(null=True)),
                ('isScoreFinal', models.BooleanField(default=False)),
                ('gameday', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='gamedays.Gameday')),
            ],
        ),
    ]
